--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,7 +24,7 @@
         </canvas>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
- <script src = "/js/script.js"></script> 
- <script src = "/js/particle.js"></script>
+ <script src = "/JS/script.js"></script> 
+ <script src = "/JS/particle.js"></script>
 </body>
 </html>
